Fix whitespace issue on home page

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -19,6 +19,7 @@ body {
     margin-top: 33.2vw;
   }
   .layout-page-content {
+    min-height: 27.4vw;
     margin-bottom: 50px;
   }
 }
